Update Readme, add new scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha ./tests/",
-    "read": "node ./app.js --input ./input-files/qa_valid.csv --output ./output-files/output-generate.csv"
+    "read": "node ./app.js --input ./input-files/qa_valid.csv --output ./output-files/output-generate.csv",
+    "generate": "node ./app.js --count 10 --output ./output-files/output-generate.csv"
   },
   "author": "QA Aleksey M",
   "license": "ISC",
