--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "faker": "^5.5.3",
     "fast-csv": "^4.3.6",
     "mocha": "^9.1.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
