--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
     "env": {
-        "browser": true,
+        "node": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "mocha" : true
     },
     "extends": [
         "airbnb-base"
@@ -11,6 +12,7 @@
         "ecmaVersion": 13
     },
     "rules": {
-        "camelcase": [2, {"properties": "always"}]
+        "camelcase": [2, {"properties": "always"}],
+        "max-len": ["error", { "code": 200 }]
     }
 }
